--- a/lab1/.vscode/settings.json
+++ b/lab1/.vscode/settings.json
@@ -26,6 +26,7 @@
         "string": "cpp",
         "string_view": "cpp",
         "vector": "cpp",
-        "istream": "cpp"
+        "istream": "cpp",
+        "iterator": "cpp"
     }
 }
