--- a/lab1/.vscode/settings.json
+++ b/lab1/.vscode/settings.json
@@ -27,6 +27,7 @@
         "string_view": "cpp",
         "vector": "cpp",
         "istream": "cpp",
-        "iterator": "cpp"
+        "iterator": "cpp",
+        "ostream": "cpp"
     }
 }
