--- a/lab1/.vscode/settings.json
+++ b/lab1/.vscode/settings.json
@@ -28,6 +28,8 @@
         "vector": "cpp",
         "istream": "cpp",
         "iterator": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "system_error": "cpp",
+        "__mutex_base": "cpp"
     }
 }
