--- a/lab2/.vscode/settings.json
+++ b/lab2/.vscode/settings.json
@@ -14,6 +14,7 @@
         "type_traits": "cpp",
         "typeinfo": "cpp",
         "algorithm": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "iosfwd": "cpp"
     }
 }
