总算过了，加锁的时候按照测试的顺序一把一把的加

--- a/lab2/.vscode/settings.json
+++ b/lab2/.vscode/settings.json
@@ -15,6 +15,9 @@
         "typeinfo": "cpp",
         "algorithm": "cpp",
         "sstream": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "__mutex_base": "cpp",
+        "memory": "cpp",
+        "list": "cpp"
     }
 }
