need further modify

--- a/lab3/.vscode/settings.json
+++ b/lab3/.vscode/settings.json
@@ -5,6 +5,7 @@
         "*.wxss": "css",
         "*.wxs": "javascript",
         "set": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "queue": "cpp"
     }
 }
