--- a/lab4/.vscode/settings.json
+++ b/lab4/.vscode/settings.json
@@ -15,6 +15,7 @@
         "type_traits": "cpp",
         "typeinfo": "cpp",
         "algorithm": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "string": "cpp"
     }
 }
